Fixed text alignment for menu subtitles

--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ body{
 .menu-restaurant{
     width: 50%;
     float: right;
-    padding: 15px;
+    padding: 25px;
     position: relative;
     min-width: 450px; /* For mobile devices */
     max-width: 500px; /* Custom max width for readbility */
@@ -290,7 +290,7 @@ body{
     color: #ff5821;
     pointer-events: none;
    cursor: default;
-  
+    
 }
 
 .menu-restaurant .menu-line {
@@ -318,6 +318,7 @@ body{
     float: left;
     color: #B1B1B1;
     font-size: 1.2rem;
+    text-align: left;
 }
 
 
